# myox_kvs

./: Cargo.toml  cli.yml
benches/: Cargo.toml  engine_bench.rs
grpc/: Cargo.toml  build.rs
grpc/proto/: client_server.proto
grpc/src/: client_server.rs  lib.rs
kvs/: Cargo.toml
kvs/src/: engine.rs  error.rs  kvs.rs  lib.rs  sled_engine.rs
kvs_client/: Cargo.toml  client_cli.yml
kvs_client/src/: main.rs
kvs_server/: Cargo.toml  server_cli.yml
kvs_server/src/: main.rs
src/lib/: error.rs  kvs.rs  lib.rs  log.rs
tests/: Cargo.toml  tests.rs
tests/src/: lib.rs  utils.rs
tests/tests/: cli.rs  docker.rs  grpc.rs  kv_store.rs  tests.rs
