[package]
name = "myox_kvs"
version = "0.1.0"
authors = ["kakoc <k.matush@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib/lib.rs"
test = false

[[bin]]
name = "kvs"
test = false

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}

[dev-dependencies]
predicates = "1.0.4"
assert_cmd = "1.0.1"
