# [package]
# name = "myox_kvs"
# version = "0.1.0"
# authors = ["kakoc <k.matush@yandex.com>"]
# edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "kvs"
# path = "src/lib/lib.rs"
# test = false

# [[bin]]
# name = "kvs"
# test = false

# [dependencies]
# clap = {version = "2.33.0", features = ["yaml"]}
# serde = {version = "1.0.106", features = ["derive"]}
# serde_json = "1.0.51"
# log = "0.4.8"
# env_logger = "0.7.1"

# [dev-dependencies]
# predicates = "1.0.4"
# assert_cmd = "1.0.1"
[workspace]
members = [
  "kvs_client",
  "grpc",
  "kvs_server",
  "kvs",
  "tests",
  "benches"
]

# [dev-dependencies]
# assert_cmd = "0.11"
# criterion = "0.2.11"
# predicates = "1.0.0"
# rand = "0.6.5"
# tempfile = "3.0.7"
# walkdir = "2.2.7"
