[package]
name = "kvs"
version = "0.1.0"
authors = ["Konstantin Matsiushonak <k.matush@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"
sled = "0.31.0"
