[package]
name = "kvs-server"
version = "0.1.0"
authors = ["Konstantin Matsiushonak <k.matush@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}

log = "0.4.8"
env_logger = "0.7.1"

tokio = {version="0.2.18",features = ["stream", "macros"]}
prost = "0.6.1"
tonic = {version="0.2.0", features = ["tls"]}

kvs = {path = "../kvs"}
grpc = {path = "../grpc"}

