[package]
name = "tests"
version = "0.1.0"
authors = ["kakoc <k.matush@yandex.com>"]
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

tonic = {version="0.2.0",features = ["tls"]}
tokio = {version="0.2.18",features = ["stream", "macros", "rt-core"]}
# tokio = "0.1.15"
# futures = "0.1.25"
reqwest = "0.9.7"


kvs = {path = "../kvs"}
kvs-client = {path = "../kvs_client"}
kvs-server = {path = "../kvs_server"}
grpc = {path = "../grpc"}

[dependencies]
futures = "0.3.4"
dockertest = "0.0.4"
shiplift = "0.6.0"
lazy_static = "1.4.0"
